kubernetes/apps/selfhosted/networking-toolbox/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: networking-toolbox
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: networking-toolbox
      app.kubernetes.io/instance: networking-toolbox
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-brauni-dev-public
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Restrict outbound probes to public websites/services only,
    # preventing direct-IP probing against internal cluster services.
    - toFQDNs:
        - matchPattern: "*"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "43"
              protocol: TCP
  egressDeny:
    - toEntities:
        - host
        - remote-node
        - kube-apiserver
